--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,10 @@ font-family: 'Lobster', cursive;
   -webkit-transition: background 1s linear;
   transition: background 1s linear;
 }
-
+.plyr{
+  width: 100%!important;
+  height: 100%!important;
+}
 .polaroid {
   width: 240x;
   height: 400px;
